# telehooks

./: .gitignore  Dockerfile  LICENSE  README.md  __main__.py  config.json.tpl  config.py  config.tpl.json  docker-compose.yml  pyproject.toml  utils.py
