[tool.poetry]
name = "telehooks"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
aiogram = "^2.17.1"
aio-pika = "^8.1.1"
sentry-sdk = "^1.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
