[tool.poetry]
name = "telehooks"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.10.2"
aiogram = "^3.11.0"
aio-pika = "^9.4.2"
sentry-sdk = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
